--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "yahweh",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Chief supervisor among a network of Rabbis",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "app:dev": "cd yahweh-admin && ember build --environment=development",
+    "app:prod": "cd yahweh-admin && ember build --environment=production"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,8 @@
   "dependencies": {
     "commander": "^4.1.0",
     "hapi": "^18.1.0",
-    "rabbi": "^1.9.1",
+    "inert": "^5.1.3",
+    "rabbi": "^1.10.8",
     "socket.io": "^2.3.0",
     "systeminformation": "^4.19.4"
   }
